<resources>
    <string name="app_name">EstherProject</string>
    <string name="create_account">Create Account</string>
    <string name="import_account">Import Account</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="private_key">Private key</string>
    <string name="cancel">Cancel</string>
    <string name="username_required">UserName Required</string>
    <string name="password_required">Password Required</string>
    <string name="subject_required">Password Required</string>
    <string name="message_required">Password Required</string>
    <string name="repeat_password_required">Repeat Password Required</string>
    <string name="private_key_required">Private Key Required</string>
    <string name="passwords_do_not_match">Passwords Do Not Match</string>
    <string name="invalid_private_key">Invalid Private Key</string>
    <string name="save">Save</string>
    <string name="account_saved">Account saved</string>
    <string name="account_already_exists">Account Already Exists</string>
    <string name="topics">Topics</string>
    <string name="set_username">Set username</string>
    <string name="logout">Logout</string>
    <string name="balance_label">Balance:</string>
    <string name="address_label">Address:</string>
    <string name="account_data">Account Data</string>
    <string name="username_label">UserName:</string>
    <string name="username">UserName</string>
    <string name="qr_code_description">QR-code Of Address</string>
    <string name="username_already_exists">Username Already Exists</string>
    <string name="request_successfully_sent">Request successfully sent</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>D
    <string name="please_backup_private_key">Please backup your private key</string>D
    <string name="backup">Backup</string>
    <string name="add_post">Add post</string>
    <string name="load">Load</string>
    <string name="send">Send</string>
    <string name="add_topic">Topic</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="invalid_topic_id">Invalid Topic Id</string>
    <string name="object_is_null">Object is null :(</string>
    <string name="value_is_null">Value is null :(</string>
    <string name="no_data">No data</string>
    <string name="changed_balance">Changed balance</string>
    <string name="notification">Notification</string>
</resources>
