<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/addTopic"
        android:icon="@drawable/ic_add"
        android:title="@string/add_topic"
        app:showAsAction="always" />
    <item android:id="@+id/accountData"
        android:icon="@drawable/ic_account_data"
        android:title="@string/account_data"
        app:showAsAction="always" />
    <item android:id="@+id/setUsername"
        android:icon="@drawable/ic_set_username"
        android:title="@string/set_username"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item android:id="@+id/backup"
        android:icon="@drawable/ic_backup"
        android:title="@string/backup"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="always"/>
</menu>