<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/messageEdit"
        android:hint="@string/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_item_margin"
        android:layout_marginStart="@dimen/dialog_item_margin"
        android:layout_marginEnd="@dimen/dialog_item_margin"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordEdit"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_item_margin"
        android:layout_marginEnd="@dimen/dialog_item_margin"
        android:inputType="textPassword" />

    <com.ekalips.fancybuttonproj.FancyButton
        android:id="@+id/positiveBtn"
        android:layout_marginStart="@dimen/dialog_item_margin"
        android:layout_marginEnd="@dimen/dialog_item_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:f_btnStyle="fill"
        app:f_textColor="@color/colorButtonText"
        app:f_fillColor="@color/colorPrimary"
        app:f_progressColor="@color/colorAccent"
        app:f_text="@string/save" />

    <com.ekalips.fancybuttonproj.FancyButton
        android:id="@+id/negativeBtn"
        android:layout_marginStart="@dimen/dialog_item_margin"
        android:layout_marginEnd="@dimen/dialog_item_margin"
        android:layout_marginBottom="@dimen/dialog_item_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:f_btnStyle="fill"
        app:f_textColor="@color/colorButtonText"
        app:f_fillColor="@color/colorPrimary"
        app:f_progressColor="@color/colorAccent"
        app:f_text="@string/cancel" />
</LinearLayout>